2011-01-19  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

	* : Merged issue-2:854-888 into trunk.
	* src/munged/gids.c (_gids_hash_create, _gids_user_to_uid):
	  Replaced calls to getpwnam() with xgetpwnam().
	* src/munged/xgetpwnam.c, src/munged/xgetpwnam.h: Added.
	* src/munged/Makefile.am: Added xgetpwnam.c and xgetpwnam.h.
	* config/x_ac_getpwnam.m4: Added _UNIX95 def for _X_AC_GETPWNAM_R_AIX.
	* src/munged/xgetgrent.c (_xgetgrent_copy_str): Fixed assert that
	  dereferenced uninitialized memory.
	* src/munged/xgetgrent.c (_xgetgrent_copy): Made "src" parm const.
	* src/munged/xgetgrent.c: Moved HAVE_GETGRENT_R_GNU #if-block to top.
	* config/x_ac_getpwnam.m4: Removed _POSIX_C_SOURCE def.
	* config/x_ac_getgrent.m4, config/x_ac_getpwnam.m4:
	  Renamed Sun references to SunOS.
	* configure.ac, config/x_ac_getpwnam.m4: Added X_AC_GETPWNAM.
	* src/munged/xgetgrent.c (xgetgrent_buf_destroy): Fixed comment.
	* src/munged/gids.c: Updated note regarding use of getpwnam / getgrent.
	* src/munged/gids.c (_gids_hash_create): Tweaked test of return value
	  from _gids_user_to_uid().
	* src/munged/xgetgrent.c (xgetgrent): Renamed lock to mutex.
	* src/munged/gids.c (_gids_hash_create): Replaced calls to
	  setgrent(), getgrent(), and endgrent() with xgetgrent_init(),
	  xgetgrent(), and xgetgrent_fini().
	* src/munged/xgetgrent.c, src/munged/xgetgrent.h: Added.
	* src/munged/Makefile.am: Added xgetgrent.c and xgetgrent.h.
	* config/x_ac_getgrent.m4: Renamed HAVE_GETGRENT_R_POSIX to
	  HAVE_GETGRENT_R_GNU.
	* configure.ac: Fixed typo.
	* configure.ac, config/x_ac_getgrent.m4: Added X_AC_GETGRENT.
	* configure.ac: Added autoconf check for sysconf().
	* configure.ac: Moved X_AC_SELECT_AUTH_METHOD to end.
	* src/munged/gids.c (_gids_update): Set t_last_update to the time of
	  the last successful update instead of the GIDS_GROUP_FILE mtime.
	* src/munged/gids.c (_gids_update): Minor cosmetic changes.